Se añaden los estilos y el responsive

--- a/index.html
+++ b/index.html
@@ -4,20 +4,22 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="stylesheets/styles.css">
   <title>Single price grid component</title>
 </head>
 <body>
-  <main>
-    <section class="section">
+  <main class="main">
+    <section class="section join-community">
       <h2 class="title is-primary">Join our community</h2>
-      <p class="paragraph is-big is-accent">30-day, hassle-free money back guarantee</p>
+      <p class="paragraph is-big is-accent subtitle">30-day, hassle-free money back guarantee</p>
       <p class="paragraph">
         Gain access to our full library of tutorials along with expert code reviews. 
         Perfect for any developers who are serious about honing their skills.
       </p>
     </section>
-    <section class="section is-primary">
+    <section class="section is-primary monthly-description">
       <h2 class="title is-on-primary">Monthly Subscription</h2>
       <p class="paragraph is-white periocity">
         <span class="currency">$</span>
@@ -29,7 +31,7 @@
       </p>
       <a href="#" class="button is-accent">Sign up</a>
     </section>
-    <section class="section is-primary-light">
+    <section class="section is-primary-light why-us">
       <h2 class="title is-on-primary">Why Us</h2>
       <ul class="list">
         <li class="item-list">Tutorials by industry experts</li>
